# CV-MATCHING-AI-AGENT

./: README.md  hr_agent_format.py  job_craws.py  main.py  pyproject.toml  requirements.txt
hr_agent/: hr_agent.py  hr_agent_be.py  hr_agent_fe.py  hr_agent_format.py  hr_agent_tools.py
