[project]
name = "cv-matching-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "streamlit>=1.58.0",
    "uvicorn>=0.50.0",
]

[tool.uv]
link-mode = "copy"
